--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,9 @@
   <listener>
     <listener-class>com.es.phoneshop.web.DemoDataServletContextListener</listener-class>
   </listener>
+  <listener>
+    <listener-class>com.es.phoneshop.web.InitializerHttpSessionListener</listener-class>
+  </listener>
 
   <servlet>
     <servlet-name>productList</servlet-name>
@@ -42,7 +45,7 @@
   </servlet-mapping>
 
   <error-page>
-    <exception-type>com.es.phoneshop.model.product.ProductNotFoundException</exception-type>
+    <exception-type>com.es.phoneshop.exception.ProductNotFoundException</exception-type>
     <location>/WEB-INF/pages/errorProductNotFound.jsp</location>
   </error-page>
 
