--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,15 +11,15 @@
   </context-param>
 
   <listener>
-    <listener-class>com.es.phoneshop.web.DemoDataServletContextListener</listener-class>
+    <listener-class>com.es.phoneshop.listener.DemoDataServletContextListener</listener-class>
   </listener>
   <listener>
-    <listener-class>com.es.phoneshop.web.InitializerHttpSessionListener</listener-class>
+    <listener-class>com.es.phoneshop.listener.InitializerHttpSessionListener</listener-class>
   </listener>
 
   <servlet>
     <servlet-name>productList</servlet-name>
-    <servlet-class>com.es.phoneshop.web.ProductListPageServlet</servlet-class>
+    <servlet-class>com.es.phoneshop.web.product.ProductListPageServlet</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>productList</servlet-name>
@@ -28,7 +28,7 @@
 
   <servlet>
     <servlet-name>productDetails</servlet-name>
-    <servlet-class>com.es.phoneshop.web.ProductDetailsPageServlet</servlet-class>
+    <servlet-class>com.es.phoneshop.web.product.ProductDetailsPageServlet</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>productDetails</servlet-name>
@@ -37,20 +37,47 @@
 
   <servlet>
     <servlet-name>productPriceHistory</servlet-name>
-    <servlet-class>com.es.phoneshop.web.PriceHistoryPageServlet</servlet-class>
+    <servlet-class>com.es.phoneshop.web.product.PriceHistoryPageServlet</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>productPriceHistory</servlet-name>
     <url-pattern>/price-history/*</url-pattern>
   </servlet-mapping>
 
+  <servlet>
+    <servlet-name>cart</servlet-name>
+    <servlet-class>com.es.phoneshop.web.cart.CartPageServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>cart</servlet-name>
+    <url-pattern>/cart</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>deleteCartItem</servlet-name>
+    <servlet-class>com.es.phoneshop.web.cart.DeleteCartItemServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>deleteCartItem</servlet-name>
+    <url-pattern>/cart/deleteCartItem/*</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>miniCart</servlet-name>
+    <servlet-class>com.es.phoneshop.web.cart.MiniCartServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>miniCart</servlet-name>
+    <url-pattern>/cart/minicart</url-pattern>
+  </servlet-mapping>
+
   <error-page>
     <exception-type>com.es.phoneshop.exception.ProductNotFoundException</exception-type>
-    <location>/WEB-INF/pages/errorProductNotFound.jsp</location>
+    <location>/WEB-INF/pages/error/errorProductNotFound.jsp</location>
   </error-page>
 
   <error-page>
     <error-code>500</error-code>
-    <location>/WEB-INF/pages/error.jsp</location>
+    <location>/WEB-INF/pages/error/error.jsp</location>
   </error-page>
 </web-app>
